<resources>
    <string name="app_name">SneakerMarket</string>
    <string name="buy_now_button">Buy Now</string>
    <string name="checkout_address_hint">Enter your full address</string>
    <string name="checkout_card_number_hint">Card Number</string>
    <string name="checkout_confirm_purchase">Confirm Purchase</string>
    <string name="checkout_cvv_hint">CVV</string>
    <string name="checkout_expiry_hint">MM/YY</string>
    <string name="checkout_order_summary">Order Summary</string>
    <string name="checkout_payment_info">Payment Information</string>
    <string name="checkout_product_name_placeholder">Product Name</string>
    <string name="checkout_shipping_address">Shipping Address</string>
    <string name="checkout_title">Checkout</string>
    <string name="checkout_total_price_placeholder">Total: $0.00</string>
    <string name="description_label">Description</string>
    <string name="email_hint">Email</string>
    <string name="favorite_icon_description">Toggle favorite</string>
    <string name="filter_button_apply">Apply</string>
    <string name="filter_button_clear">Clear</string>
    <string name="filter_color">Color</string>
    <string name="filter_color_black">Black</string>
    <string name="filter_color_red">Red</string>
    <string name="filter_color_white">White</string>
    <string name="filter_price_max">Max</string>
    <string name="filter_price_max_description">Maximum price input</string>
    <string name="filter_price_min">Min</string>
    <string name="filter_price_min_description">Minimum price input</string>
    <string name="filter_price_range">Price Range</string>
    <string name="filter_size">Size</string>
    <string name="filter_size_8">8</string>
    <string name="filter_size_8_5">8.5</string>
    <string name="filter_size_9">9</string>
    <string name="filter_title">Filters</string>
    <string name="login_button">Login</string>
    <string name="login_to_account">Log in to your account</string>
    <string name="password_hint">Password</string>
    <string name="product_brand_placeholder">Brand</string>
    <string name="product_description_placeholder">Loading product description</string>
    <string name="product_image_description">Image of the sneaker</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="product_price_placeholder">$0.00</string>
    <string name="product_type_placeholder">Type</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="size_label">Size</string>
    <string name="welcome_back">Welcome Back</string>
</resources>